--- a/config.yml
+++ b/config.yml
@@ -245,3 +245,88 @@ webhooks:
   run_end:
   changes:
   delete:
+plex:                            # Can be individually specified per library as well; REQUIRED for the script to run
+  url: http://192.168.1.12:32400
+  token: ####################
+  timeout: 60
+  db_cache:
+  clean_bundles: false
+  empty_trash: false
+  optimize: false
+  verify_ssl:
+tmdb:                            # REQUIRED for the script to run
+  apikey: ################################
+  language: en
+tautulli:                        # Can be individually specified per library as well
+  url: http://192.168.1.12:8181
+  apikey: ################################
+github:
+  token: ################################
+omdb:
+  apikey: ########
+  cache_expiration: 60
+mdblist:
+  apikey: #########################
+  cache_expiration: 60
+notifiarr:
+  apikey: ####################################
+gotify:
+  url: http://192.168.1.12:80
+  token: ####################################
+anidb:                           # Not required for AniDB builders unless you want mature content
+  username: ######
+  password: ######
+radarr:                          # Can be individually specified per library as well
+  url: http://192.168.1.12:7878
+  token: ################################
+  add_missing: false
+  add_existing: false
+  upgrade_existing: false
+  monitor_existing: false
+  root_folder_path: "S:/Movies"
+  monitor: true
+  availability: announced
+  quality_profile: HD-1080p
+  tag:
+  search: false
+  radarr_path:
+  plex_path:
+sonarr:                          # Can be individually specified per library as well
+  url: http://192.168.1.12:8989
+  token: ################################
+  add_missing: false
+  add_existing: false
+  upgrade_existing: false
+  monitor_existing: false
+  root_folder_path: "S:/TV Shows"
+  monitor: all
+  quality_profile: HD-1080p
+  language_profile: English
+  series_type: standard
+  season_folder: true
+  tag:
+  search: false
+  cutoff_search: false
+  sonarr_path:
+  plex_path:
+trakt:
+  client_id: ####################
+  client_secret: ####################
+  pin:
+  authorization:
+    # everything below is autofilled by the script
+    access_token:
+    token_type:
+    expires_in:
+    refresh_token:
+    scope: public
+    created_at:
+mal:
+  client_id: ####################
+  client_secret: ####################
+  authorization:
+    # everything below is autofilled by the script
+    access_token:
+    token_type:
+    expires_in:
+    refresh_token:
